--- a/data/cards/09839115.yaml
+++ b/data/cards/09839115.yaml
@@ -1,7 +1,7 @@
 konami_id: 19498
 password: 9839115
 name:
-  en: Moonhaze Dragon Vagnawa
+  en: Vagnawa the Moon-Eating Dragon
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    If this card is Synchro Summoned: You can make this card gain ATK equal to the total Levels of the non-Tuners used as its material x 300 (until the end of the next turn), then inflict damage to your opponent equal to the Level of the Tuner used as its material x 300. You can only use this effect of "Moonhaze Dragon Vagnawa" once per turn.
+    If this card is Synchro Summoned: You can make this card gain ATK equal to the total Levels of the non-Tuners used as its material x 300 (until the end of the next turn), then inflict damage to your opponent equal to the Level of the Tuner used as its material x 300. You can only use this effect of "Vagnawa the Moon-Eating Dragon" once per turn.
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ atk: 1500
 def: 1500
 images:
 - index: 1
-  image: MoonhazeDragonVagnawa-PHNI-JP-C.png
+  image: VagnawatheMoonEatingDragon-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP043
@@ -62,8 +62,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023598
