--- a/data/cards/12682213.yaml
+++ b/data/cards/12682213.yaml
@@ -1,7 +1,7 @@
 konami_id: 19535
 password: 12682213
 name:
-  en: Iron Thunderhammer
+  en: Iron Thunder
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ card_type: Trap
 property: Counter
 images:
 - index: 1
-  image: IronThunderhammer-PHNI-JP-SR.png
+  image: IronThunder-PHNI-JP-SR.png
 sets:
   ja:
   - set_number: PHNI-JP080
@@ -67,8 +67,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1022772
