--- a/data/cards/24649931.yaml
+++ b/data/cards/24649931.yaml
@@ -1,7 +1,7 @@
 konami_id: 19526
 password: 24649931
 name:
-  en: Protean
+  en: Materialization
   de:
   es:
   fr:
@@ -19,7 +19,7 @@ text:
     ● Special Summon it to its owner's field.
     ● Return it to the hand.
     ● Destroy it, then you can destroy 1 monster on the field with an equal or lower Level.
-    You can only activate 1 "Protean" per turn.
+    You can only activate 1 "Materialization" per turn.
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: Protean-PHNI-JP-C.png
+  image: Materialization-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP071
@@ -67,8 +67,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023590
