--- a/data/cards/26913989.yaml
+++ b/data/cards/26913989.yaml
@@ -1,7 +1,7 @@
 konami_id: 19457
 password: 26913989
 name:
-  en: Geist Grinder Golem
+  en: Geistgrinder Golem
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 幽魂拷问魔像
 text:
   en: |-
-    You can only Special Summon "Geist Grinder Golem(s)" once per turn. You can reveal 1 "Yubel" monster in your hand; Special Summon this card from your hand to your opponent's field, then you can Special Summon the revealed monster to your field. Once per turn, if this card battles a "Yubel" monster, during damage calculation: Your opponent gains 3000 LP. If you Special Summon "Yubel" while this card is in your GY (except during the Damage Step): You can Special Summon this card to your opponent's field.
+    You can only Special Summon "Geistgrinder Golem(s)" once per turn. You can reveal 1 "Yubel" monster in your hand; Special Summon this card from your hand to your opponent's field, then you can Special Summon the revealed monster to your field. Once per turn, if this card battles a "Yubel" monster, during damage calculation: Your opponent gains 3000 LP. If you Special Summon "Yubel" while this card is in your GY (except during the Damage Step): You can Special Summon this card to your opponent's field.
   de:
   es:
   fr:
@@ -39,7 +39,7 @@ atk: 3000
 def: 300
 images:
 - index: 1
-  image: GeistGrinderGolem-PHNI-JP-C.png
+  image: GeistgrinderGolem-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP002
@@ -60,8 +60,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1002436
