--- a/data/cards/26984177.yaml
+++ b/data/cards/26984177.yaml
@@ -1,7 +1,7 @@
 konami_id: 19520
 password: 26984177
 name:
-  en: Stone Wall of the Imperial Tombs
+  en: Walls of the Imperial Tomb
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 王墓之石壁
 text:
   en: |-
-    This card's name becomes "King's Sarcophagus" while in the Field Zone. During your Main Phase: You can add 1 "Horus" monster from your Deck to your hand, then place 1 card from your hand on the bottom of the Deck. You can only use this effect of "Stone Wall of the Imperial Tombs" once per turn. If you activate the effect of "Horus the Black Flame Deity": You can draw 1 card.
+    This card's name becomes "King's Sarcophagus" while in the Field Zone. During your Main Phase: You can add 1 "Horus" monster from your Deck to your hand, then place 1 card from your hand on the bottom of the Deck. You can only use this effect of "Walls of the Imperial Tomb" once per turn. If you activate the effect of "Horus the Black Flame Deity": You can draw 1 card.
   de:
   es:
   fr:
@@ -35,7 +35,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: StoneWalloftheImperialTombs-PHNI-JP-C.png
+  image: WallsoftheImperialTomb-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP065
@@ -56,8 +56,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1012424
