--- a/data/cards/35834119.yaml
+++ b/data/cards/35834119.yaml
@@ -1,7 +1,7 @@
 konami_id: 19499
 password: 35834119
 name:
-  en: Fishlamp
+  en: Fish Lamp
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-    If this card is sent to the GY as Synchro Material: You can Special Summon 2 "Lamp Tokens" (Fish/FIRE/Level 2/ATK 0/DEF 0), also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fish monsters. If you control a Fish Synchro Monster: You can banish this card from your GY, then target 1 card on the field; destroy it. You can only use each effect of "Fishlamp" once per turn.
+    If this card is sent to the GY as Synchro Material: You can Special Summon 2 "Lamp Tokens" (Fish/FIRE/Level 2/ATK 0/DEF 0), also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Fish monsters. If you control a Fish Synchro Monster: You can banish this card from your GY, then target 1 card on the field; destroy it. You can only use each effect of "Fish Lamp" once per turn.
   de:
   es:
   fr:
@@ -43,7 +43,7 @@ def: 400
 materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
-  image: Fishlamp-PHNI-JP-C.png
+  image: FishLamp-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP044
@@ -64,8 +64,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1020473
