--- a/data/cards/38044854.yaml
+++ b/data/cards/38044854.yaml
@@ -1,7 +1,7 @@
 konami_id: 19511
 password: 38044854
 name:
-  en: Rise-Rank-Up-Magic Raidraptor's Force
+  en: Rise Rank-Up-Magic Raidraptor's Force
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 起升阶魔法－急袭猛禽之力
 text:
   en: |-
-    During either Main Phase or your opponent's Battle Phase: Target 2 or more "Raidraptor" Xyz Monsters you control and/or in your GY, including a monster on the field; Special Summon from your Extra Deck, 1 "Raidraptor" Xyz Monster whose Rank equals those 2 or more monsters' total Ranks, and if you do, attach those monsters to it as material. (This is treated as an Xyz Summon. Transfer their materials to the Summoned monster.) You can only activate 1 "Rise-Rank-Up-Magic Raidraptor's Force" per turn.
+    During either Main Phase or your opponent's Battle Phase: Target 2 or more "Raidraptor" Xyz Monsters you control and/or in your GY, including a monster on the field; Special Summon from your Extra Deck, 1 "Raidraptor" Xyz Monster whose Rank equals those 2 or more monsters' total Ranks, and if you do, attach those monsters to it as material. (This is treated as an Xyz Summon. Transfer their materials to the Summoned monster.) You can only activate 1 "Rise Rank-Up-Magic Raidraptor's Force" per turn.
   de:
   es:
   fr:
@@ -78,8 +78,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1022908
