--- a/data/cards/47894537.yaml
+++ b/data/cards/47894537.yaml
@@ -1,7 +1,7 @@
 konami_id: 19490
 password: 47894537
 name:
-  en: Illusionist of Jongleurghoul
+  en: Jongleur-Ghoul Illusionist
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ atk: 2000
 def: 0
 images:
 - index: 1
-  image: IllusionistofJongleurghoul-PHNI-JP-NR.png
+  image: JongleurGhoulIllusionist-PHNI-JP-NR.png
 sets:
   ja:
   - set_number: PHNI-JP035
@@ -61,8 +61,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023586
