--- a/data/cards/49139666.yaml
+++ b/data/cards/49139666.yaml
@@ -1,7 +1,7 @@
 konami_id: 19484
 password: 49139666
 name:
-  en: Estranger Big Bang
+  en: E Stranger Big Bang
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 异星战队 大爆炸连者
 text:
   en: |-
-    If a monster Special Summoned from the Extra Deck is on the field: You can Special Summon this card from your hand. During your Main Phase: You can reduce the Levels of as many other monsters currently on the field as possible by 1, and if you do, increase this card's Level by the number of monsters whose Level was reduced this way. During your Battle Phase or your opponent's Main Phase, if this card's Level is 8 or higher (Quick Effect): You can destroy 1 other card on the field, and if you do, this card's Level becomes 5. You can only use each effect of "Estranger Big Bang" once per turn.
+    If a monster Special Summoned from the Extra Deck is on the field: You can Special Summon this card from your hand. During your Main Phase: You can reduce the Levels of as many other monsters currently on the field as possible by 1, and if you do, increase this card's Level by the number of monsters whose Level was reduced this way. During your Battle Phase or your opponent's Main Phase, if this card's Level is 8 or higher (Quick Effect): You can destroy 1 other card on the field, and if you do, this card's Level becomes 5. You can only use each effect of "E Stranger Big Bang" once per turn.
   de:
   es:
   fr:
@@ -39,7 +39,7 @@ atk: 2100
 def: 500
 images:
 - index: 1
-  image: EstrangerBigBang-PHNI-JP-C.png
+  image: EStrangerBigBang-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP028
@@ -60,8 +60,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023567
