--- a/data/cards/49299410.yaml
+++ b/data/cards/49299410.yaml
@@ -1,7 +1,7 @@
 konami_id: 19533
 password: 49299410
 name:
-  en: Rumpel Teufel
+  en: The Black Goat Laughs
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 嗤嗤黑羊猜猜其名
 text:
   en: |-
-    Declare 1 Monster Card name; neither player can Special Summon monsters with that original name for the rest of this turn, except from the GY. You can banish this card from your GY and declare 1 Monster Card name; neither player can activate the effects of monsters on the field with that original name for the rest of this turn. You can only use 1 "Rumpel Teufel" effect per turn, and only once that turn.
+    Declare 1 Monster Card name; neither player can Special Summon monsters with that original name for the rest of this turn, except from the GY. You can banish this card from your GY and declare 1 Monster Card name; neither player can activate the effects of monsters on the field with that original name for the rest of this turn. You can only use 1 "The Black Goat Laughs" effect per turn, and only once that turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Toy
 images:
 - index: 1
-  image: RumpelTeufel-PHNI-JP-R.png
+  image: TheBlackGoatLaughs-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP078
@@ -64,8 +64,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1019500
