--- a/data/cards/52918032.yaml
+++ b/data/cards/52918032.yaml
@@ -1,7 +1,7 @@
 konami_id: 19472
 password: 52918032
 name:
-  en: Memento Attic Ghost
+  en: Mementotlan Ghattic
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 冥铭途・楼中怪
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can target 1 "Memento" card in your GY, except "Memento Attic Ghost"; add it to your hand. If this card is sent to the GY by a "Memento" monster's effect: You can Special Summon this card. You can only use each effect of "Memento Attic Ghost" once per turn.
+    If this card is Normal or Special Summoned: You can target 1 "Memento" card in your GY, except "Mementotlan Ghattic"; add it to your hand. If this card is sent to the GY by a "Memento" monster's effect: You can Special Summon this card. You can only use each effect of "Mementotlan Ghattic" once per turn.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoAtticGhost-PHNI-JP-C.png
+  image: MementotlanGhattic-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP017
@@ -61,8 +61,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1018937
