--- a/data/cards/53416326.yaml
+++ b/data/cards/53416326.yaml
@@ -40,6 +40,8 @@ attribute: WIND
 level: 3
 atk: 800
 def: 1500
+series:
+- Circular
 images:
 - index: 1
   image: FairyanttheCircularSorcerer-PHHY-EN-SR-1E.png
