--- a/data/cards/62318994.yaml
+++ b/data/cards/62318994.yaml
@@ -1,7 +1,7 @@
 konami_id: 19458
 password: 62318994
 name:
-  en: Samsara Regenerating Lotus
+  en: Samsara D Lotus
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 纳祭魔鬼莲
 text:
   en: |-
-    You can Tribute this card; Special Summon 1 "Yubel" monster from your Deck. During your opponent's turn, when a monster effect is activated while you control a "Yubel" monster (Quick Effect): You can Tribute this card; that effect becomes "Destroy 1 "Yubel" monster on the field". During your End Phase, if you control "Yubel" and this card is in your GY: You can either add this card to your hand or Special Summon it. You can only use each effect of "Samsara Regenerating Lotus" once per turn.
+    You can Tribute this card; Special Summon 1 "Yubel" monster from your Deck. During your opponent's turn, when a monster effect is activated while you control a "Yubel" monster (Quick Effect): You can Tribute this card; that effect becomes "Destroy 1 "Yubel" monster on the field". During your End Phase, if you control "Yubel" and this card is in your GY: You can either add this card to your hand or Special Summon it. You can only use each effect of "Samsara D Lotus" once per turn.
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ series:
 - Relinquished
 images:
 - index: 1
-  image: SamsaraRegeneratingLotus-PHNI-JP-R.png
+  image: SamsaraDLotus-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP003
@@ -62,8 +62,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1002437
