--- a/data/cards/73167098.yaml
+++ b/data/cards/73167098.yaml
@@ -1,7 +1,7 @@
 konami_id: 19494
 password: 73167098
 name:
-  en: Aromalylith Magnolia
+  en: Aromalilith Magnolia
   de:
   es:
   fr:
@@ -45,7 +45,7 @@ series:
 - Aroma
 images:
 - index: 1
-  image: AromalylithMagnolia-PHNI-JP-R.png
+  image: AromalilithMagnolia-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP039
@@ -73,8 +73,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1022868
