--- a/data/cards/74289646.yaml
+++ b/data/cards/74289646.yaml
@@ -1,7 +1,7 @@
 konami_id: 19491
 password: 74289646
 name:
-  en: Dienos Stacking
+  en: Royal Rhino with Deceitful Dice
   de:
   es:
   fr:
@@ -45,7 +45,7 @@ atk: 600
 def: 600
 images:
 - index: 1
-  image: DienosStacking-PHNI-JP-NR.png
+  image: RoyalRhinowithDeceitfulDice-PHNI-JP-NR.png
 sets:
   ja:
   - set_number: PHNI-JP036
@@ -66,8 +66,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023584
