--- a/data/cards/76823930.yaml
+++ b/data/cards/76823930.yaml
@@ -1,7 +1,7 @@
 konami_id: 18753
 password: 76823930
 name:
-  en: Terminal Offering
+  en: Ultimeat Offering
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 血肉之代价
 text:
   en: |-
-    During your Main Phase: You can pay 1000 LP; you can conduct up to 3 Normal Summons/Sets this turn, not just 1. During your opponent's Battle Phase: You can pay 500 LP; immediately after this effect resolves, Normal Summon 1 monster. You can only use each effect of "Terminal Offering" once per turn.
+    During your Main Phase: You can pay 1000 LP; you can conduct up to 3 Normal Summons/Sets this turn, not just 1. During your opponent's Battle Phase: You can pay 500 LP; immediately after this effect resolves, Normal Summon 1 monster. You can only use each effect of "Ultimeat Offering" once per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
-  image: TerminalOffering-24PP-JP-ScR.png
+  image: UltimeatOffering-24PP-JP-ScR.png
 sets:
   ja:
   - set_number: VJMP-JP234
@@ -54,8 +54,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 717028
