--- a/data/cards/85123771.yaml
+++ b/data/cards/85123771.yaml
@@ -1,7 +1,7 @@
 konami_id: 19485
 password: 85123771
 name:
-  en: Goblin Paratrooper Squad
+  en: Goblin Freefall Squad
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 格布林降下部队
 text:
   en: |-
-    If this card is Special Summoned from the hand in Attack Position: You can target 1 Effect Monster your opponent controls; change this card to Defense Position, also negate the targeted monster's effects while this card is in face-up Defense Position. If a monster(s) is Special Summoned to your opponent's field while this card is in your GY (except during the Damage Step): You can discard 1 card; add this card to your hand. You can only use each effect of "Goblin Paratrooper Squad" once per turn.
+    If this card is Special Summoned from the hand in Attack Position: You can target 1 Effect Monster your opponent controls; change this card to Defense Position, also negate the targeted monster's effects while this card is in face-up Defense Position. If a monster(s) is Special Summoned to your opponent's field while this card is in your GY (except during the Damage Step): You can discard 1 card; add this card to your hand. You can only use each effect of "Goblin Freefall Squad" once per turn.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Goblin
 images:
 - index: 1
-  image: GoblinParatrooperSquad-PHNI-JP-C.png
+  image: GoblinFreefallSquad-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP029
@@ -61,8 +61,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1019438
