--- a/data/cards/85698115.yaml
+++ b/data/cards/85698115.yaml
@@ -1,7 +1,7 @@
 konami_id: 19534
 password: 85698115
 name:
-  en: Terrors of the Netherroot
+  en: Terrors of the Afterroot
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 幽世断离
 text:
   en: |-
-    Target 1 monster in your opponent's GY; Special Summon it to their field, then you can banish 1 monster they control, then return 1 of their banished monsters to the GY. You can banish this card from your GY, except the turn it was sent there, then target 1 Level 1 monster in your GY; shuffle it into the Deck, then you can Set 1 "Terrors of the Underroot", "Terrors of the Overroot", or "Terrors of the Netherroot" directly from your Deck.
+    Target 1 monster in your opponent's GY; Special Summon it to their field, then you can banish 1 monster they control, then return 1 of their banished monsters to the GY. You can banish this card from your GY, except the turn it was sent there, then target 1 Level 1 monster in your GY; shuffle it into the Deck, then you can Set 1 "Terrors of the Underroot", "Terrors of the Overroot", or "Terrors of the Afterroot" directly from your Deck.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: TerrorsoftheNetherroot-PHNI-JP-SR.png
+  image: TerrorsoftheAfterroot-PHNI-JP-SR.png
 sets:
   ja:
   - set_number: PHNI-JP079
@@ -75,8 +75,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1022999
