--- a/data/cards/87462901.yaml
+++ b/data/cards/87462901.yaml
@@ -1,7 +1,7 @@
 konami_id: 19479
 password: 87462901
 name:
-  en: Envoy of the Wax State
+  en: Emissary from the House of Wax
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 幻蜡馆的使者
 text:
   en: |-
-    When an opponent's monster declares an attack: You can Special Summon this card from your hand. You can only use this effect of "Envoy of the Wax State" once per turn. If this card battles a monster, neither can be destroyed by that battle. At the end of your opponent's Battle Phase: You can activate this effect; until the start of your opponent's next Battle Phase, all Attack Position monsters your opponent currently controls cannot change their battle positions, they cannot be used as material for a Fusion, Synchro, Xyz, or Link Summon, also their effects are negated.
+    When an opponent's monster declares an attack: You can Special Summon this card from your hand. You can only use this effect of "Emissary from the House of Wax" once per turn. If this card battles a monster, neither can be destroyed by that battle. At the end of your opponent's Battle Phase: You can activate this effect; until the start of your opponent's next Battle Phase, all Attack Position monsters your opponent currently controls cannot change their battle positions, they cannot be used as material for a Fusion, Synchro, Xyz, or Link Summon, also their effects are negated.
   de:
   es:
   fr:
@@ -39,7 +39,7 @@ atk: 800
 def: 1800
 images:
 - index: 1
-  image: EnvoyoftheWaxState-PHNI-JP-R.png
+  image: EmissaryfromtheHouseofWax-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP030
@@ -60,8 +60,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023572
