--- a/data/cards/yugipedia1040738.yaml
+++ b/data/cards/yugipedia1040738.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>円<rt>えん</rt></ruby><ruby>喚<rt>かん</rt></ruby><ruby>妖<rt>よう</rt></ruby><ruby>精<rt>せい</rt></ruby>キクロス
-  ja_romaji: Enkan Yōsei Kikurosu
+  ja_romaji: Enkanyōsei Kikurosu
   ko:
   ko_rr:
   zh-TW:
@@ -31,6 +31,8 @@ attribute: WIND
 level: 4
 atk: 1000
 def: 1800
+series:
+- Circular
 images:
 - index: 1
   image: KyklostheCircularFairy-LEDE-JP-C.png
