--- a/data/cards/yugipedia1040743.yaml
+++ b/data/cards/yugipedia1040743.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase: The turn player can excavate cards from the top of their Deck up to the number of cards their opponent controls, and if they do, they add 1 excavated card to their hand, then they place the rest and 1 card from their hand on the bottom of the Deck in any order. This effect of "Where There's a Will, There's a Way Out" can only be used once per turn. Once per turn, during the End Phase, if the turn player excavated 9 cards or more with this card's effect this turn: They can activate this effect; shuffle all cards on their opponent's field and GY into the Deck.
+    During the Main Phase: The turn player can excavate cards from the top of their Deck up to the number of cards their opponent controls, and if they do, they add 1 excavated card to their hand, then they place the rest and 1 card from their hand on the bottom of the Deck in any order. This effect of "Where There's a Will, There's a Way Out" can only be used once per turn. Once per turn, during the End Phase, if the turn player excavated 9 or more cards with this card's effect this turn: They can activate this effect; shuffle all cards on their opponent's field and GY into the Deck.
   de:
   es:
   fr:
