--- a/data/cards/12612470.yaml
+++ b/data/cards/12612470.yaml
@@ -1,7 +1,7 @@
 konami_id: 19486
 password: 12612470
 name:
-  en: Douyou Chatsubou
+  en: Procession of the Tea Jar
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 童妖 茶壶
 text:
   en: |-
-    Face-down Defense Position monsters in this card's column cannot change their battle positions, also neither player can activate Set cards in this card's column's Spell & Trap Zones. You can only use each of the following effects of "Douyou Chatsubou" once per turn. During your Main Phase: You can move this card to an unused adjacent Main Monster Zone. If this card in the Monster Zone moves to another Monster Zone: Change all other monsters in its column to face-down Defense Position.
+    Face-down Defense Position monsters in this card's column cannot change their battle positions, also neither player can activate Set cards in this card's column's Spell & Trap Zones. You can only use each of the following effects of "Procession of the Tea Jar" once per turn. During your Main Phase: You can move this card to an unused adjacent Main Monster Zone. If this card in the Monster Zone moves to another Monster Zone: Change all other monsters in its column to face-down Defense Position.
   de:
   es:
   fr:
@@ -39,7 +39,7 @@ atk: 500
 def: 0
 images:
 - index: 1
-  image: DouyouChatsubou-PHNI-JP-C.png
+  image: ProcessionoftheTeaJar-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP031
@@ -60,8 +60,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1023578
