--- a/data/cards/12954226.yaml
+++ b/data/cards/12954226.yaml
@@ -51,6 +51,8 @@ level: 7
 atk: 2200
 def: 2500
 materials: 1 Tuner + 1 or more non-Tuner monsters
+series:
+- Circular
 images:
 - index: 1
   image: CircleoftheFairies-PHHY-EN-C-1E.png
