--- a/data/cards/27822206.yaml
+++ b/data/cards/27822206.yaml
@@ -1,7 +1,7 @@
 konami_id: 19514
 password: 27822206
 name:
-  en: The Passage of Stars and Frost
+  en: Ages of Stars and Frost
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 几星霜
 text:
   en: |-
-    If a monster(s) you controlled was destroyed by your Spell effect or an opponent's card effect, and sent to the GY this turn: You can conduct your next Battle Phase twice. If a monster(s) you control is returned to the Deck and/or face-down Extra Deck while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use this effect of "The Passage of Stars and Frost" once per turn.
+    If a monster(s) you controlled was destroyed by your Spell effect or an opponent's card effect, and sent to the GY this turn: You can conduct your next Battle Phase twice. If a monster(s) you control is returned to the Deck and/or face-down Extra Deck while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use this effect of "Ages of Stars and Frost" once per turn.
   de:
   es:
   fr:
@@ -34,7 +34,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: ThePassageofStarsandFrost-PHNI-JP-R.png
+  image: AgesofStarsandFrost-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP059
@@ -55,8 +55,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1020941
