--- a/rush.yaml
+++ b/rush.yaml
@@ -132871,3 +132871,118 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1040574
+---
+konami_id:
+name:
+  en: Obnoxious Celtic Guard
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card cannot be destroyed by battle with a monster that has 1900 or more ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: EARTH
+level: 4
+atk: 1400
+def: 1200
+images:
+- index: 1
+  image: ObnoxiousCelticGuard-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP032
+    set_name: Transamu of Transcendence
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1040911
+---
+konami_id:
+name:
+  en: De-Spell
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 face-up Spell Card or 1 face-down Spell/Trap Card on your opponent's field. If the chosen card is face-up, destroy it. If the chosen card is face-down, look at it, then return it to its original position. Then, if it was a Spell Card, destroy it.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: DeSpell-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP060
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1040913
