--- a/data/cards/90241276.yaml
+++ b/data/cards/90241276.yaml
@@ -47,6 +47,7 @@ sets:
   - set_number: PHNI-EN012
     set_name: Phantom Nightmare
     rarities:
+    - Ultra Rare
   de:
   - set_number: PHNI-DE012
     set_name: Phantom Nightmare
