--- a/data/cards/yugipedia1040745.yaml
+++ b/data/cards/yugipedia1040745.yaml
@@ -29,13 +29,13 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: OnebyOneWeWalkFrostyForestFrolickingTreadingintheTracks-LEDE-JP-NR.png
+  image: OnebyOneWeWalkFrostyForestFrolickingTreadingintheTracks-LEDE-JP-C.png
 sets:
   ja:
   - set_number: LEDE-JP070
     set_name: Legacy of Destruction
     rarities:
-    - Normal Rare
+    - Common
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
