--- a/rush.yaml
+++ b/rush.yaml
@@ -132961,7 +132961,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up Spell Card or 1 face-down Spell/Trap Card on your opponent's field. If the chosen card is face-up, destroy it. If the chosen card is face-down, look at it, then return it to its original position. Then, if it was a Spell Card, destroy it.
+    Choose 1 face-up Spell Card or 1 face-down Spell/Trap Card on your opponent's field. If that card is face-up, destroy it. If that card is face-down, look at it, then return it to its original position. Then, if it was a Spell Card, destroy it.
   de:
   es:
   fr:
