--- a/data/cards/01047075.yaml
+++ b/data/cards/01047075.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19724
 password: 1047075
 name:
   en: Fighting Flame Swordsman
@@ -73,6 +73,6 @@ sets:
     - Ultra Rare
     - Collector's Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037022
