--- a/data/cards/00324483.yaml
+++ b/data/cards/00324483.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19727
 password: 324483
 name:
   en: Ultimate Flame Swordsman
@@ -79,6 +79,6 @@ sets:
     - Super Rare
     - Collector's Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037678
