--- a/data/cards/08080257.yaml
+++ b/data/cards/08080257.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19733
 password: 8080257
 name:
   en: Flame Swordsdance
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037630
