--- a/data/cards/09102835.yaml
+++ b/data/cards/09102835.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19730
 password: 9102835
 name:
   en: Salamandra Fusion
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037663
