--- a/data/cards/35697544.yaml
+++ b/data/cards/35697544.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19731
 password: 35697544
 name:
   en: Fighting Flame Sword
@@ -88,6 +88,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037683
