--- a/data/cards/36319131.yaml
+++ b/data/cards/36319131.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19728
 password: 36319131
 name:
   en: Fighting Flame Dragon
@@ -75,6 +75,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037024
