--- a/data/cards/37531679.yaml
+++ b/data/cards/37531679.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19725
 password: 37531679
 name:
   en: Salamandra, the Flying Flame Dragon
@@ -69,6 +69,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037653
