--- a/data/cards/62091148.yaml
+++ b/data/cards/62091148.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19732
 password: 62091148
 name:
   en: Salamandra with Chain
@@ -65,6 +65,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037628
