--- a/data/cards/73714736.yaml
+++ b/data/cards/73714736.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19729
 password: 73714736
 name:
   en: Flame Swordsrealm
@@ -64,6 +64,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037637
