--- a/data/cards/73936388.yaml
+++ b/data/cards/73936388.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19726
 password: 73936388
 name:
   en: Mirage Swordsman
@@ -68,6 +68,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg:
+  tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1037626
