--- a/data/cards/21036656.yaml
+++ b/data/cards/21036656.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can discard 1 card; add 1 Insect or Plant Tuner from your Deck to your hand, except "Kyklos the Circular Fairy". If an Insect and/or Plant Synchro Monster(s) is Special Summoned while this card is in your GY: You can Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Kyklos the Circular Fairy" once per turn.
+    If this card is Normal or Special Summoned: You can discard 1 card; add 1 Insect or Plant Tuner from your Deck to your hand, except "Kyklos the Circular Fairy". If an Insect and/or Plant Synchro Monster(s) is Special Summoned while this card is in your GY (except during the Damage Step): You can Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Kyklos the Circular Fairy" once per turn.
   de:
   es:
   fr:
