--- a/data/cards/39114494.yaml
+++ b/data/cards/39114494.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can target 1 "Voiceless Voice" card in your GY or banishment, except "Blessing of the Voiceless Voice"; add it to your hand. If a non-Ritual Monster(s) is Normal or Special Summoned face-up: You can Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand and/or field whose total Levels equal or exceed the Ritual Monster's Level, and if you do, it cannot be destroyed by battle. You can only use each effect of "Blessing of the Voiceless Voice" once per turn.
+    You can target 1 "Voiceless Voice" card in your GY or banishment, except "Blessing of the Voiceless Voice"; add it to your hand. If a non-Ritual Monster(s) is Normal or Special Summoned face-up (except during the Damage Step): You can Ritual Summon 1 LIGHT Warrior or Dragon Ritual Monster from your hand, by Tributing monsters from your hand and/or field whose total Levels equal or exceed the Ritual Monster's Level, and if you do, it cannot be destroyed by battle. You can only use each effect of "Blessing of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
