--- a/data/cards/64881644.yaml
+++ b/data/cards/64881644.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Melodious" monster from your Deck to your hand, except "Refrain the Melodious Songstress". If a "Melodious" Fusion Monster(s) is Special Summoned to your field while this card is face-up in your Extra Deck: You can place this card in your Pendulum Zone. You can only use each monster effect of "Refrain the Melodious Songstress" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Melodious" monster from your Deck to your hand, except "Refrain the Melodious Songstress". If a "Melodious" Fusion Monster(s) is Special Summoned to your field while this card is face-up in your Extra Deck (except during the Damage Step): You can place this card in your Pendulum Zone. You can only use each monster effect of "Refrain the Melodious Songstress" once per turn.
   de:
   es:
   fr:
