--- a/data/cards/90276649.yaml
+++ b/data/cards/90276649.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is added to your hand, except by drawing it for your normal draw: You can reveal this card; Special Summon 1 Level 4 or lower "Melodious" monster from your hand or GY. If a "Melodious" Fusion Monster(s) is Special Summoned to your field while this card is face-up in your Extra Deck: You can place this card in your Pendulum Zone. You can only use each monster effect of "Couplet the Melodious Songstress" once per turn.
+    If this card is added to your hand, except by drawing it for your normal draw: You can reveal this card; Special Summon 1 Level 4 or lower "Melodious" monster from your hand or GY. If a "Melodious" Fusion Monster(s) is Special Summoned to your field while this card is face-up in your Extra Deck (except during the Damage Step): You can place this card in your Pendulum Zone. You can only use each monster effect of "Couplet the Melodious Songstress" once per turn.
   de:
   es:
   fr:
