--- a/data/cards/93729896.yaml
+++ b/data/cards/93729896.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can take 1 Fiend monster with 0 ATK/DEF from your Deck, and either add it to your hand or destroy it. Once per turn, if a face-up "Yubel" monster(s) you control leaves the field by card effect: You can add 1 "Yubel" monster from your Deck, GY, or banishment to your hand whose original Level is 1 higher or 1 lower than 1 of those monsters that left the field, then you can Special Summon it, ignoring its Summoning conditions. You can only activate 1 "Nightmare Throne" per turn.
+    When this card is activated: You can take 1 Fiend monster with 0 ATK/DEF from your Deck, and either add it to your hand or destroy it. Once per turn, if a face-up "Yubel" monster(s) you control leaves the field by card effect (except during the Damage Step): You can add 1 "Yubel" monster from your Deck, GY, or banishment to your hand whose original Level is 1 higher or 1 lower than 1 of those monsters that left the field, then you can Special Summon it, ignoring its Summoning conditions. You can only activate 1 "Nightmare Throne" per turn.
   de:
   es:
   fr:
