--- a/data/cards/07020743.yaml
+++ b/data/cards/07020743.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 1 monsters
-    Once per Chain, if the activation of a card or effect is negated: You can attach up to 1 card from each GY to this card as material. This card gains these effects based on the number of materials attached to it.
+    Once per Chain, if the activation of a card or effect is negated (except during the Damage Step): You can attach up to 1 card from each GY to this card as material. This card gains these effects based on the number of materials attached to it.
     ● 1+: Gains 700 ATK/DEF for each material attached to it.
     ● 4+: Cannot be destroyed by battle or card effects.
     ● 8+: (Quick Effect): You can detach 4 materials from this card; destroy all cards on the field.
