--- a/data/cards/42307760.yaml
+++ b/data/cards/42307760.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Insect, Plant, and/or Reptile monsters
-    If a monster(s) is Special Summoned from your opponent's Deck and/or Extra Deck: You can destroy 2 monsters on the field. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use each effect of "Raika no Daiouga" once per turn.
+    If a monster(s) is Special Summoned from your opponent's Deck and/or Extra Deck (except during the Damage Step): You can destroy 2 monsters on the field. If this card is in your GY: You can target 1 Insect, Plant, or Reptile monster you control; place it on the bottom of the Deck, and if you do, Special Summon this card, also you cannot Special Summon monsters for the rest of this turn, except Insect, Plant, and Reptile monsters. You can only use each effect of "Raika no Daiouga" once per turn.
   de:
   es:
   fr:
