--- a/data/cards/52607696.yaml
+++ b/data/cards/52607696.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When an opponent's monster declares an attack: Special Summon 1 Illusion monster from your hand or GY, and if you do, return the attacking monster to the hand. If a face-up Illusion monster(s) you control leaves the field by an opponent's card effect while this card is in your GY: You can banish this card; Special Summon 1 Illusion monster from your hand or GY. You can only use this effect of "Mirage Force" once per turn.
+    When an opponent's monster declares an attack: Special Summon 1 Illusion monster from your hand or GY, and if you do, return the attacking monster to the hand. If a face-up Illusion monster(s) you control leaves the field by an opponent's card effect while this card is in your GY (except during the Damage Step): You can banish this card; Special Summon 1 Illusion monster from your hand or GY. You can only use this effect of "Mirage Force" once per turn.
   de:
   es:
   fr:
