--- a/data/cards/53765052.yaml
+++ b/data/cards/53765052.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a "Sinful Spoils" card is in either GY, you can Special Summon this card (from your hand). You can only Special Summon "Diabellze of the Original Sin" once per turn this way. Your opponent cannot activate Spell/Trap Cards that were not Set. If either player Sets a Spell/Trap(s) to the field while this monster is on the field: You can target 1 card you control and 1 card your opponent controls; destroy them. You can only use this effect of "Diabellze of the Original Sin" once per turn.
+    If a "Sinful Spoils" card is in either GY, you can Special Summon this card (from your hand). You can only Special Summon "Diabellze of the Original Sin" once per turn this way. Your opponent cannot activate Spell/Trap Cards that were not Set. If either player Sets a Spell/Trap(s) to the field while this monster is on the field (except during the Damage Step): You can target 1 card you control and 1 card your opponent controls; destroy them. You can only use this effect of "Diabellze of the Original Sin" once per turn.
   de:
   es:
   fr:
