--- a/data/cards/46186135.yaml
+++ b/data/cards/46186135.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     "Judgment Dragon" + "Punishment Dragon"
-    Must be Special Summoned by banishing the above cards, 1 each from your field and GY. Once per turn (Quick Effect): You can pay 2000 LP; banish all other cards on the field and in the GYs. Once per turn, during your End Phase: Send the top 4 cards of your Deck to the GY. If this card in its owner's possession is destroyed by an opponent's card: You can add 1 each of your banished "Judgment Dragon" and "Punishment Dragon" to your hand, then you can Special Summon both, ignoring their Summoning conditions.
+    Must be Special Summoned by banishing the above cards, 1 each from your Monster Zone and GY. Once per turn (Quick Effect): You can pay 2000 LP; banish all other cards on the field and in the GYs. Once per turn, during your End Phase: Send the top 4 cards of your Deck to the GY. If this card in its owner's possession is destroyed by an opponent's card: You can add 1 each of your banished "Judgment Dragon" and "Punishment Dragon" to your hand, then you can Special Summon both, ignoring their Summoning conditions.
   de:
   es:
   fr:
