--- a/data/cards/yugipedia1040943.yaml
+++ b/data/cards/yugipedia1040943.yaml
@@ -31,6 +31,8 @@ attribute: DARK
 level: 3
 atk: 1500
 def: 500
+series:
+- Swarm of
 images:
 - index: 1
   image: SwarmofCentipedes-PHNI-EN-C-1E.png
