--- a/data/cards/98477480.yaml
+++ b/data/cards/98477480.yaml
@@ -3,7 +3,7 @@ password: 98477480
 name:
   en: Barrier of the Voiceless Voice
   de:
-  es:
+  es: Barrera de la Voz Muda
   fr:
   it:
   pt:
@@ -17,7 +17,8 @@ text:
   en: |-
     While you control "Lo, the Prayers of the Voiceless Voice" and a LIGHT Ritual Monster, your opponent's monsters can only target Ritual Monsters for attacks, also your opponent cannot target LIGHT monsters you control with card effects. During your Main Phase: You can add 1 "Voiceless Voice" card or 1 "Skull Guardian" Ritual Monster from your Deck to your hand, except "Barrier of the Voiceless Voice". You can only use this effect of "Barrier of the Voiceless Voice" once per turn.
   de:
-  es:
+  es: |-
+    Mientras controlas "Lo, las Oraciones de la Voz Muda" y un Monstruo de Ritual de LUZ, los monstruos de tu adversario sólo pueden seleccionar Monstruos de Ritual para ataques, y además tu adversario no puede seleccionar monstruos de LUZ que controles con efectos de cartas. Durante tu Main Phase: puedes añadir a tu mano 1 carta "Voz Muda" o 1 Monstruo de Ritual "Guardián del Cráneo" en tu Deck, excepto "Barrera de la Voz Muda". Sólo puedes usar este efecto de "Barrera de la Voz Muda" una vez por turno.
   fr:
   it:
   pt:
