--- a/data/cards/66730191.yaml
+++ b/data/cards/66730191.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>燦<rt>さん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>開<rt>カイ</rt></ruby><ruby>門<rt>メン</rt></ruby>
-  ja_romaji: Sangen Kaimen
+  ja_romaji: Sangenkaimen
   ko:
   ko_rr:
   zh-TW:
