--- a/data/cards/26548709.yaml
+++ b/data/cards/26548709.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Special Summon this card (from your hand) by placing 1 of your banished Insect, Plant, or Reptile monsters on the bottom of the Deck. You can only Special Summon "Raika no Yahazu Kamikiri" once per turn this way. If this card is sent to the GY as material for the Link Summon of a "Raika" monster: You can target 1 Level 4 or lower Insect, Plant, or Reptile monster in your GY, except "Raika no Yahazu Kamikiri"; Special Summon it in Defense Position. You can only use this effect of "Raika no Yahazu Kamikiri" once per turn.
+    You can Special Summon this card (from your hand) by placing 1 of your banished Insect, Plant, or Reptile monsters on the bottom of the Main Deck. You can only Special Summon "Raika no Yahazu Kamikiri" once per turn this way. If this card is sent to the GY as material for the Link Summon of a "Raika" monster: You can target 1 Level 4 or lower Insect, Plant, or Reptile monster in your GY, except "Raika no Yahazu Kamikiri"; Special Summon it in Defense Position. You can only use this effect of "Raika no Yahazu Kamikiri" once per turn.
   de:
   es:
   fr:
