--- a/data/cards/83266092.yaml
+++ b/data/cards/83266092.yaml
@@ -8,7 +8,7 @@ name:
   it: Tomba dell'Organismo Super Antico
   pt: Túmulo do Organismo Super Antigo
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>古<rt>こ</rt></ruby><ruby>代<rt>だい</rt></ruby><ruby>生<rt>せい</rt></ruby><ruby>物<rt>ぶつ</rt></ruby>の<ruby>墓<rt>はか</rt></ruby><ruby>場<rt>ば</rt></ruby>
-  ja_romaji: Chō Kodai Seibutsu no Hakaba
+  ja_romaji: Chōkodai Seibutsu no Hakaba
   ko: 초고대 생물의 묘지
   ko_rr:
   zh-TW: 超古代生物的墓場
