--- a/data/cards/49964567.yaml
+++ b/data/cards/49964567.yaml
@@ -106,6 +106,11 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  zh-CN:
+  - set_number: NE01-SC029
+    set_name: 'Nature Pack: Blazing Heroes'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
