--- a/data/cards/30190809.yaml
+++ b/data/cards/30190809.yaml
@@ -8,7 +8,7 @@ name:
   it: Golem Ingranaggio, La Fortezza Movente
   pt: Gear Golen a Fortaleza Móvel
   ja: <ruby>機<rt>き</rt></ruby><ruby>動<rt>どう</rt></ruby><ruby>砦<rt>とりで</rt></ruby>のギア・ゴーレム
-  ja_romaji: Kidō Toride no Gia Gōremu
+  ja_romaji: Kidōtoride no Gia Gōremu
   ko: 기동요새의 기어 골렘
   ko_rr:
   zh-TW:
