--- a/data/cards/36021814.yaml
+++ b/data/cards/36021814.yaml
@@ -216,6 +216,10 @@ sets:
     set_name: Tournament Pack 2024 Vol.1
     rarities:
     - Super Rare
+  - set_number: 24TP-JP102
+    set_name: Top Prize Pack 2024 Vol.1
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: TLM-KR032
     set_name: The Lost Millennium
