--- a/data/cards/87188910.yaml
+++ b/data/cards/87188910.yaml
@@ -121,6 +121,10 @@ sets:
     set_name: Tournament Pack 2024 Vol.1
     rarities:
     - Super Rare
+  - set_number: 24TP-JP101
+    set_name: Top Prize Pack 2024 Vol.1
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: ETCO-KR043
     set_name: Eternity Code
