--- a/data/cards/66384688.yaml
+++ b/data/cards/66384688.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Pendulum Monsters, including a "Majespecter" monster
-    If this card is Link Summoned: You can add up to 2 face-up "Majespecter" Pendulum Monsters from your Extra Deck to your hand, then you can add up to 2 "Majespecter" Pendulum Monsters with different names from your Deck to your Extra Deck face-up, also you cannot Special Summon from the Extra Deck for the rest of this turn, except "Majespecter" or "Dracoslayer" monsters. You can only use this effect of "Majespecter Orthrus - Nue" once per turn.
+    If this card is Link Summoned: You can add up to 2 face-up "Majespecter" Pendulum Monsters from your Extra Deck to your hand, then you can add up to 2 "Majespecter" Pendulum Monsters with different names from your Deck to your face-up Extra Deck, also you cannot Special Summon from the Extra Deck for the rest of this turn, except "Majespecter" or "Dracoslayer" monsters. You can only use this effect of "Majespecter Orthrus - Nue" once per turn.
   de:
   es:
   fr:
