--- a/data/cards/86310763.yaml
+++ b/data/cards/86310763.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 肃声威光
 text:
   en: |-
-    During the Main Phase: You can activate 1 of these effects.
+    During the Main Phase: You can activate 1 of these effects;
     ● Shuffle 1 LIGHT Ritual Monster (Warrior or Dragon) or 1 Ritual Spell from your hand or GY into the Deck, and if you do, add to your hand, or Special Summon, 1 "Voiceless Voice" monster from your Deck.
-    ● Target cards your opponent controls, up to the number of LIGHT Ritual Monsters (Warrior and Dragon) you control; destroy both this card and as many of the targeted cards as possible.
-    You can only use this effect of "Radiance of the Voiceless Voice" once per turn.
+    ● Target cards your opponent controls, up to the number of LIGHT Ritual Monsters (Warrior or Dragon) you control; destroy both this card and as many of the targeted cards as possible.
+    You can only use the effect of "Radiance of the Voiceless Voice" once per turn.
   de:
   es:
   fr:
