--- a/data/cards/yugipedia1040488.yaml
+++ b/data/cards/yugipedia1040488.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During the Main Phase, if this card is in your hand (Quick Effect): You can target 1 card in a Field Zone; Special Summon this card to your opponent's field, and if you do, destroy that card, then you can add to your hand or Set 1 "Ashened" Continuous Trap from your Deck. If this card is sent from your opponent's field to your GY: You can can destroy all monsters on the field. You can only use each effect of "Veidos the Eruption Dragon of Extinction" once per turn.
+    During the Main Phase, if this card is in your hand (Quick Effect): You can target 1 card in a Field Zone; Special Summon this card to your opponent's field, and if you do, destroy that card, then you can add to your hand or Set 1 "Ashened" Continuous Trap from your Deck. If this card is sent from your opponent's field to your GY: You can destroy all monsters on the field. You can only use each effect of "Veidos the Eruption Dragon of Extinction" once per turn.
   de:
   es:
   fr:
